[package]
name = "warc_parser"
version = "1.0.0"
authors = ["Stephen Becker IV <github@deathbyescalator.com>"]
description = "Web ARChive parsing library using nom lib"
documentation = "http://sbeckeriv.github.io/warc_nom_parser/warc_parser/index.html"
homepage = "http://sbeckeriv.github.io/warc_nom_parser/warc_parser/index.html"
repository = "https://github.com/sbeckeriv/warc_nom_parser"
readme = "./README.md"
keywords = ["web", "archive", "parsing", "warc"]
license = "MIT"

[dependencies]
nom = "1.2"
clippy = { version = "0.0.67", optional = true }
[features]
default=[]
